# buildify

./: .bazelrc  .gitignore  .gitmodules  .http  .prettierrc  BUILD.bazel  Makefile  README.md  WORKSPACE  apidocs.swagger.json  buf.gen.yaml  buf.yaml  config.json  deps.bzl  go.mod  go.sum  go_repositories.bzl  kustomization.yaml  package-lock.json  package.json  service_account.json
app/dynamic_data/: BUILD.bazel  config.yaml
app/dynamic_data/api/: BUILD.bazel  api.pb.go  api.pb.gw.go  api.pb.validate.go  api.proto  api_grpc.pb.go  data.pb.go  data.pb.validate.go  data.proto
app/dynamic_data/cmd/: BUILD.bazel  initialize.go  main.go
app/dynamic_data/config/: BUILD.bazel  config.go  config_gen.go
app/dynamic_data/internal/adapter/: BUILD.bazel  gen_code.go
app/dynamic_data/internal/constant/: BUILD.bazel  const.go
app/dynamic_data/internal/dto/: BUILD.bazel  collection.go  document.go
app/dynamic_data/internal/model/: BUILD.bazel  collection.go  document.go  user.go
app/dynamic_data/internal/service/: BUILD.bazel  collection.go  database_script.go  document.go  register_gen.go  service.go  test.go
app/dynamic_data/internal/store/: BUILD.bazel  collection.go  document.go  repository.go  user.go
app/dynamic_data/internal/util/: BUILD.bazel  convert_data.go  file.go  upload_file.go
app/dynamic_data/pkg/adapter/: BUILD.bazel  adapter.go
app/file-management/: BUILD.bazel  Makefile  storage-key.json
app/file-management/cmd/: BUILD.bazel  initialize.go  main.go  service.go
app/file-management/config/: BUILD.bazel  config_gen.go
app/file-management/internal/constant/: BUILD.bazel  code.go
app/file-management/internal/consts/: BUILD.bazel
app/file-management/internal/handler/: BUILD.bazel  file.go  image.go  response.go
app/file-management/internal/store/: BUILD.bazel  repository.go
app/file-management/internal/util/: BUILD.bazel  helper.go  upload_file.go
app/file-mgt/cmd/: BUILD.bazel  initialize.go  main.go  service.go
app/file-mgt/internal/handler/: BUILD.bazel  health_check.go  image.go  response.go
app/file-mgt/internal/store/: BUILD.bazel  repository.go
app/file_mgt/cmd/: BUILD.bazel  initialize.go  main.go  service.go
app/file_mgt/config/: BUILD.bazel  config.go
app/file_mgt/internal/handler/: BUILD.bazel  file.go  health_check.go  image.go  middleware.go  response.go
app/file_mgt/internal/store/: BUILD.bazel  repository.go
app/file_mgt/internal/util/: BUILD.bazel  upload_file.go
app/gen-code/: BUILD.bazel  Dockerfile  Makefile  config.yaml
app/gen-code/api/: BUILD.bazel  api.pb.go  api.pb.gw.go  api.proto  api_grpc.pb.go  data.pb.go  data.proto
app/gen-code/base/reactJS/: README.md  package.json
app/gen-code/base/reactJS/public/: index.html
app/gen-code/base/reactJS/src/routes/: index.tsx
app/gen-code/cmd/: BUILD.bazel  initialize.go  main.go
app/gen-code/config/: BUILD.bazel  config.go
app/gen-code/internal/constant/: BUILD.bazel  const.go
app/gen-code/internal/consts/: BUILD.bazel  const.go
app/gen-code/internal/dto/: BUILD.bazel
app/gen-code/internal/model/: BUILD.bazel  user.go
app/gen-code/internal/service/: BUILD.bazel  gen_code_react.go  hello.go  register_gen.go  service.go
app/gen-code/internal/store/: BUILD.bazel  repository.go  user.go
app/gen-code/internal/util/: BUILD.bazel  file.go  upload_file.go
app/gen-code/internal/utils/: BUILD.bazel  file.go  upload_file.go
app/gen_code/: BUILD.bazel  Makefile  config.yaml
app/gen_code/api/: BUILD.bazel  api.pb.go  api.pb.gw.go  api.pb.validate.go  api.proto  api_grpc.pb.go  data.pb.go  data.pb.validate.go  data.proto
app/gen_code/base/reactJS/: .prettierrc  README.md  package-lock.json  package.json  tsconfig.json
app/gen_code/base/reactJS/src/: App.css  App.test.tsx  App.tsx
app/gen_code/base/reactJS/src/constants/: index.ts
app/gen_code/base/reactJS/src/context/: index.tsx
app/gen_code/base/reactJS/src/database/: index.ts
app/gen_code/base/reactJS/src/hooks/: useGetValuesFromReferencedProps.ts
app/gen_code/base/reactJS/src/pages/Home/: index.tsx  props.tsx
app/gen_code/base/reactJS/src/routes/: renderRoutes.tsx
app/gen_code/base/reactJS/src/styles/: custom-setting.scss
app/gen_code/base/reactJS/src/theme/: index.ts
app/gen_code/base/reactJS/src/types/: index.ts
app/gen_code/base/reactJS/src/utils/: index.ts
app/gen_code/cmd/: BUILD.bazel  initialize.go  main.go
app/gen_code/config/: BUILD.bazel  config.go  config_gen.go
app/gen_code/internal/constant/: BUILD.bazel  const.go
app/gen_code/internal/dto/: BUILD.bazel  page.go
app/gen_code/internal/model/: BUILD.bazel  user.go
app/gen_code/internal/service/: BUILD.bazel  gen_code_react.go  gen_comp.go  gen_database.go  gen_page.go  hello.go  register_gen.go  service.go
app/gen_code/internal/store/: BUILD.bazel  repository.go
app/gen_code/internal/util/: BUILD.bazel  file.go  upload_file.go
app/gen_code/pkg/adapter/: BUILD.bazel  adapter.go
app/user/: BUILD.bazel  Makefile  config.yaml  storage-key.json
app/user/api/: BUILD.bazel  api.pb.go  api.pb.gw.go  api.pb.validate.go  api.proto  api_grpc.pb.go  data.pb.go  data.pb.validate.go  data.proto
app/user/cmd/: BUILD.bazel  initialize.go  main.go
app/user/config/: BUILD.bazel  config.go  config_gen.go
app/user/internal/adapter/: BUILD.bazel  gen_code.go
app/user/internal/constant/: BUILD.bazel  const.go
app/user/internal/dto/: BUILD.bazel  project.go
app/user/internal/model/: BUILD.bazel  default_project.go  project.go  user.go
app/user/internal/service/: BUILD.bazel  project.go  register_gen.go  service.go  test.go  user.go
app/user/internal/store/: BUILD.bazel  default_project.go  project.go  repository.go  user.go
app/user/pkg/adapter/: BUILD.bazel  adapter.go
app/user/proxy/: proxy.go
k8s/: dynamic-data-deployment.yaml  dynamic-data-service.yaml  file-mgt-deployment.yaml  file-mgt-service.yaml  gen-code-deployment.yaml  gen-code-service.yaml  ingress.yaml  managed-cert.yaml  my-secret.yaml  user-deployment.yaml  user-service.yaml
proxy/: proxy.go
request/: a.json  user.http  (+5 more)
(+89 files in other folders)
