package(default_visibility = ["//visibility:public"])

## docker build - rebuild
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

pkg_tar(
    name = "config_files",
    srcs = [
        # "config.yaml",
        "storage-key.json",
    ],
    strip_prefix = ".",
)

go_image(
    name = "base_binary_image",
    binary = "//app/file-management/cmd:cmd",
)

container_image(
    name = "container_image",
    base = ":base_binary_image",
    data_path = "app/file-management",
    directory = "/app/app/file-management/cmd/cmd.runfiles/buildify/",
    tars = [
        ":config_files",
    ],
)

container_push(
    name = "push",
    format = "Docker",
    image = ":container_image",
    registry = "buildify.azurecr.io",
    repository = "file_mgt",
    skip_unchanged_digest = False,
    tag = "{IMAGE_TAG}",
)

# bazel build //app/file-management:container_image
# bazel run --stamp --workspace_status_command="echo IMAGE_TAG $(git rev-parse --short HEAD)" //app/file-management:push
