package(default_visibility = ["//visibility:public"])

## docker build - rebuild
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

# load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

pkg_tar(
    name = "baseReact_files",
    srcs = glob(["base/**"]),
    strip_prefix = ".",
)

pkg_tar(
    name = "config_files",
    srcs = [
        "config.yaml",
        "storage-key.json",
    ],
    strip_prefix = ".",
)

go_image(
    name = "base_binary_image",
    binary = "//app/gen-code/cmd:cmd",
)

container_image(
    name = "container_image",
    base = ":base_binary_image",
    # data_path = ".",
    data_path = "app/gen-code",
    directory = "/app/app/gen-code/cmd/cmd.runfiles/buildify/",
    tars = [
        ":config_files",
        ":baseReact_files",
    ],
    run_as_root = True, # Required to install packages as root
    run = [
        "apt-get update && apt-get install -y npm",
        "npm install -g npx"
    ]
)

# container_push(
#     name = "push",
#     format = "Docker",
#     image = ":container_image",
#     registry = "asia.gcr.io",
#     repository = "teko-registry/tekone/orders/fulfillment-router-service",
#     skip_unchanged_digest = False,
#     tag = "{IMAGE_TAG}",
# )
