load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

go_library(
    name = "cmd_lib",
    srcs = [
        "initialize.go",
        "main.go",
    ],
    importpath = "github.com/thesisK19/buildify/app/gen-code/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//app/gen-code/config",
        "//app/gen-code/internal/service",
        "//app/gen-code/internal/store",
        "//library/server",
        "@com_github_sirupsen_logrus//:logrus",
        "@org_mongodb_go_mongo_driver//mongo",
        "@org_mongodb_go_mongo_driver//mongo/options",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
