load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
# load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "cmd_lib",
    srcs = [
        "initialize.go",
        "main.go",
    ],
    importpath = "github.com/thesisK19/buildify/app/user/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//app/user/config",
        "//app/user/internal/service",
        "//app/user/internal/store",
        "//library/server",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_urfave_cli_v2//:cli",
        "@org_mongodb_go_mongo_driver//mongo",
        "@org_mongodb_go_mongo_driver//mongo/options",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)

