load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "adapter",
    srcs = ["gen_code.go"],
    importpath = "github.com/thesisK19/buildify/app/dynamic_data/internal/adapter",
    visibility = ["//app/dynamic_data:__subpackages__"],
    deps = [
        "//app/gen_code/api",
        "@com_github_grpc_ecosystem_go_grpc_middleware//logging/logrus/ctxlogrus",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)
