load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "adapter",
    srcs = ["adapter.go"],
    importpath = "github.com/thesisK19/buildify/app/dynamic_data/pkg/adapter",
    visibility = ["//visibility:public"],
    deps = [
        "//app/dynamic_data/api",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)
