load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "consts",
    srcs = ["constant.go"],
    importpath = "github.com/thesisK19/buildify/app/file-management/internal/consts",
    visibility = ["//app/file-management:__subpackages__"],
)

go_library(
    name = "constant",
    srcs = ["code.go"],
    importpath = "github.com/thesisK19/buildify/app/file-management/internal/constant",
    visibility = ["//app/file-management:__subpackages__"],
)
