load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "handler",
    srcs = [
        "file.go",
        "image.go",
        "middleware.go",
        "response.go",
    ],
    importpath = "github.com/thesisK19/buildify/app/file-management/internal/handler",
    visibility = ["//app/file-management:__subpackages__"],
    deps = [
        "//app/file-management/internal/constant",
        "//app/file-management/internal/util",
    ],
)
