load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "store",
    srcs = ["repository.go"],
    importpath = "github.com/thesisK19/buildify/app/file-management/internal/store",
    visibility = ["//app/file-management:__subpackages__"],
    deps = [
        "//app/file-management/config",
        "@com_github_sirupsen_logrus//:logrus",
        "@org_mongodb_go_mongo_driver//mongo",
    ],
)
